--- a/playbooks/bigip_cis_preconfig_Flannel.yml
+++ b/playbooks/bigip_cis_preconfig_Flannel.yml
@@ -1,6 +1,6 @@
 ---
 - name: Set up a VXLAN tunnel on BIG-IP for Container Ingress Service (ClusterIP)
-  hosts: mybigip
+  hosts: lab_bigips
   gather_facts: no
   connection: local
   collections: 
